# ESE1-S2-Project

./: .gitignore  CODEOWNERS  README.md  main.c  testfile.txt
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/: CMakeLists.txt  Kconfig  cb_common_config.h  cb_helpers.c  crypto_benchmark.c  crypto_benchmark.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/cases/: aead_all.c  aead_sxxx.c  aes_all.c  aes_s200.c  aes_s400.c  ctr_drbg_all.c  ecdsa_all.c  hash_all.c  hash_s400.c  mac_all.c  mac_s400.c  rsa_all.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/doc/: crypto_benchmark_integration_guide.md  crypto_benchmark_overview.md
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/include/: cb_aead.h  cb_aes.h  cb_ctr_drbg.h  cb_ecdsa.h  cb_hash.h  cb_helpers.h  cb_mac.h  cb_rsa.h  cb_types.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/opaque/: cb_aead_opaque.c  cb_aes_opaque.c  cb_ecdsa_opaque.c  cb_mac_opaque.c  cb_rsa_opaque.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/osal/linux/: CMakeLists.txt  cb_exit.c  cb_init.c  cb_tick.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/port/custom/: init.c  wrappers.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/port/ele_s200/: aead.c  aes.c  ctr_drbg.c  ele.h  ele_init.c  ele_init.h  hash.c  rsa.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/port/ele_s400/: aead.c  aes.c  ctr_drbg.c  ecdsa.c  ele.h  ele_fw.h  ele_init.c  ele_init.h  hash.c  mac.c  rsa.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/port/pkcs11/: CMakeLists.txt  aead.c  aes.c  common_utils.c  ctr_drbg.c  ecdsa.c  hash.c  mac.c  rsa.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/port/psa/: CMakeLists.txt  aead.c  aes.c  common_utils.c  ecdsa.c  hash.c  mac.c  rsa.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/crypto_benchmark/transparent/: cb_aead.c  cb_aes.c  cb_ctr_drbg.c  cb_ecdsa.c  cb_hash.c  cb_mac.c  cb_rsa.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/els_pkc/zephyr/: CMakeLists.txt  Kconfig  module.yml
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/: CMakeLists.txt  Kconfig  README.md  SBOM.spdx.json  SW-Content-Register.txt  mcux.cmake
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/caam/: caam.h  caam_crypto_primitives.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/caam/include/: mcux_psa_caam_common_aead.h  mcux_psa_caam_common_asymmetric_encryption.h  mcux_psa_caam_common_asymmetric_signature.h  mcux_psa_caam_common_cipher.h  mcux_psa_caam_common_init.h  mcux_psa_caam_common_key_generation.h  mcux_psa_caam_common_mac.h  mcux_psa_caam_entropy.h  mcux_psa_caam_hash.h  mcux_psa_caam_init.h  mcux_psa_caam_utils.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/caam/src/: mcux_psa_caam_common_aead.c  mcux_psa_caam_common_asymmetric_encryption.c  mcux_psa_caam_common_asymmetric_signature.c  mcux_psa_caam_common_cipher.c  mcux_psa_caam_common_init.c  mcux_psa_caam_common_key_generation.c  mcux_psa_caam_common_mac.c  mcux_psa_caam_entropy.c  mcux_psa_caam_hash.c  mcux_psa_caam_init.c  mcux_psa_caam_utils.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/casper/: casper.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/casper/include/: mcux_psa_casper_common_asymmetric_signature.h  mcux_psa_casper_common_init.h  mcux_psa_casper_ecdsa_port.h  mcux_psa_casper_ecp_port.h  mcux_psa_casper_init.h  mcux_psa_casper_key_generation_port.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/casper/src/: mcux_psa_casper_common_asymmetric_signature.c  mcux_psa_casper_common_init.c  mcux_psa_casper_ecdsa_port.c  mcux_psa_casper_ecp_port.c  mcux_psa_casper_init.c  mcux_psa_casper_key_generation_port.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/dcp/: dcp.h  dcp_crypto_primitives.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/dcp/include/: mcux_psa_dcp_cipher.h  mcux_psa_dcp_common_init.h  mcux_psa_dcp_entropy.h  mcux_psa_dcp_hash.h  mcux_psa_dcp_init.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/dcp/src/: mcux_psa_dcp_cipher.c  mcux_psa_dcp_common_init.c  mcux_psa_dcp_entropy.c  mcux_psa_dcp_hash.c  mcux_psa_dcp_init.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/ela_csec/: ela_csec.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/ele_hseb/: ele_hseb.h  ele_hseb_crypto_composites.h  ele_hseb_crypto_primitives.h  ele_hseb_readme.md
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/ele_s200/: ele_s200_readme.md  ele_s2xx.h  ele_s2xx_crypto_primitives.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/ele_s4xx/: ele_s4xx.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/hashcrypt/: hashcrypt.h  hashcrypt_crypto_primitives.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/hashcrypt/include/: mcux_psa_hashcrypt_common_cipher.h  mcux_psa_hashcrypt_common_init.h  mcux_psa_hashcrypt_entropy.h  mcux_psa_hashcrypt_hash.h  mcux_psa_hashcrypt_init.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/hashcrypt/src/: mcux_psa_hashcrypt_common_cipher.c  mcux_psa_hashcrypt_common_init.c  mcux_psa_hashcrypt_entropy.c  mcux_psa_hashcrypt_hash.c  mcux_psa_hashcrypt_init.c
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/osal/: CMakeLists.txt
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/osal/zephyr/: osal_mutex.c  osal_mutex_platform.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/sgi/: sgi.h  sgi_crypto_primitives.h
sdks/ESE1-S2-Proj_sdk/mcuxsdk/components/psa_crypto_driver/zephyr/: CMakeLists.txt  Kconfig  module.yml
sdks/ESE1-S2-Proj_sdk/mcuxsdk/middleware/se_hostlib/demos/: CMakeLists.txt
sdks/ESE1-S2-Proj_sdk/mcuxsdk/middleware/se_hostlib/demos/ksdk/: .clang-format  CMakeLists.txt
sdks/ESE1-S2-Proj_sdk/mcuxsdk/middleware/se_hostlib/demos/se05x/: Android.mk  CMakeLists.txt
sdks/ESE1-S2-Proj_sdk/mcuxsdk/middleware/se_hostlib/sss/: CMakeLists.txt  ChangeLogKSDK.txt  sssAkmLists.mk
(+8851 files in other folders)
