#
# Copyright 2019,2020 NXP
# SPDX-License-Identifier: Apache-2.0
#
#

IF(
    SSS_HAVE_APPLET_SE05X_IOT
    OR SSS_HAVE_APPLET_SE05X_L
    OR SSS_HAVE_APPLET_LOOPBACK
    OR SSS_HAVE_KSDK
)
    IF(NXPProprietary)
        ADD_SUBDIRECTORY(ksdk)
    ENDIF()
ENDIF()

IF(NXPInternal AND SSS_HAVE_APPLET_SE051_UWB)
    IF(SSS_HAVE_SE05X_AUTH_NONE)
        ADD_SUBDIRECTORY(SE051W_nxp)
    ENDIF()
ENDIF()

IF(SSS_HAVE_APPLET_SE05X_IOT)
    IF(SSS_HAVE_LARGE_PROGRAMS) # Skip larger programs. e.g.
        ADD_SUBDIRECTORY(se05x)
        IF(NXPInternal)
            ADD_SUBDIRECTORY(se05x_nxp)
        ENDIF()
    ENDIF()
ENDIF()

IF(NXPProprietary)
    IF(WithNXPNFCRdLib)
        IF(SSS_HAVE_MIFARE_DESFIRE)
            ADD_SUBDIRECTORY(nxpnfcrdlib)
        ENDIF()
    ENDIF()
ENDIF()

IF(SSS_HAVE_HOST_WITH_FILE_SYSTEM)
    IF(SSS_HAVE_APPLET_SE05X_IOT AND (SSS_HAVE_SE05X_AUTH_NONE OR SSS_HAVE_SE05X_AUTH_PLATFSCP03))
        ADD_SUBDIRECTORY(apdu_player)
    ENDIF()
ENDIF()

IF(
    SSS_HAVE_HOST_LPCXPRESSO55S_NS
    OR SSS_HAVE_HOST_LPCXPRESSO55S_S
    OR SSS_HAVE_HOST_LPCXPRESSO55S
)
    ADD_SUBDIRECTORY(lpc55s)
ENDIF()

IF(WithOPCUA_open62541)
    IF(
        SSS_HAVE_HOSTCRYPTO_MBEDTLS
        AND
            (SSS_HAVE_HOST_PCWINDOWS
             OR SSS_HAVE_HOST_IMXLINUX
             OR SSS_HAVE_HOST_PCLINUX64
             OR SSS_HAVE_HOST_RASPBIAN
            )
    )
        IF(NOT SSS_HAVE_APPLET_AUTH)
            ADD_SUBDIRECTORY(opc_ua)
        ENDIF()
    ENDIF()
ENDIF()

IF(SSS_HAVE_HOSTCRYPTO_NONE)
    # PASS
ELSE()
    IF(NOT SSS_HAVE_HOST_LPCXPRESSO55S_NS)
        ADD_SUBDIRECTORY(test_Crypto)
    ENDIF(NOT SSS_HAVE_HOST_LPCXPRESSO55S_NS)
ENDIF()
